# libresin

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: ResinVersion.cmake
codegen/: CMakeLists.txt  codegen.py  gl.h.in  loader_generic.c.in  mkheader_gl.py  wgl.h.in
include/resin/: common.h  resin.h
src/: CMakeLists.txt  config.h.in  loader_win32.c  support_common.c  support_win32.c
tools/: package.py  release.py
